# block-ciphers

./: Cargo.toml  README.md
.github/workflows/: aes.yml  cbc.yaml  cfb-mode.yaml  cfb8.yaml  ctr.yaml  ige.yaml  ofb.yaml  pcbc.yaml
aes/: Cargo.toml
aes/benches/: mod.rs
aes/src/: armv8.rs  autodetect.rs  lib.rs  ni.rs  soft.rs
aes/src/ni/: aes128.rs  aes192.rs  aes256.rs  ctr.rs  test_expand.rs
aes/src/soft/: fixslice32.rs  fixslice64.rs
blowfish/: Cargo.toml
cast5/: Cargo.toml
des/: Cargo.toml
des/src/: des.rs  tdes.rs
idea/: Cargo.toml
kuznyechik/benches/: lib.rs
kuznyechik/src/: lib.rs
kuznyechik/src/soft/: mod.rs
kuznyechik/src/sse2/: mod.rs
magma/benches/: lib.rs
modes/cbc/: README.md
modes/cfb-mode/: README.md
modes/cfb-mode/src/: lib.rs
modes/cfb8/: README.md
modes/cfb8/src/: lib.rs
modes/ctr/: README.md
modes/ctr/src/flavors/: ctr128.rs  ctr32.rs  ctr64.rs
modes/ctr/tests/ctr32/: big_endian.rs  little_endian.rs
modes/gost-modes/: Cargo.toml
modes/gost-modes/src/: cbc.rs  cfb.rs  ctr128.rs  ctr64.rs  lib.rs  ofb.rs  utils.rs
modes/gost-modes/tests/: lib.rs
modes/ige/: README.md
modes/ofb/: README.md
modes/ofb/src/: lib.rs
modes/pcbc/: LICENSE-MIT  README.md
rc2/: Cargo.toml
serpent/: Cargo.toml
sm4/: Cargo.toml
threefish/: Cargo.toml
twofish/: Cargo.toml
