[workspace]
members = [
    "aes",
    "blowfish",
    "cast5",
    "des",
    "idea",
    "kuznyechik",
    "magma",
    "modes/cbc",
    "modes/cfb8",
    "modes/cfb-mode",
    "modes/ctr",
    "modes/gost-modes",
    "modes/ige",
    "modes/ofb",
    "modes/pcbc",
    "rc2",
    "serpent",
    "sm4",
    "twofish",
    "threefish",
]

[patch.crates-io]
cipher = { git = "https://github.com/RustCrypto/traits/", branch = "new_traits" }
block-buffer = { git = "https://github.com/RustCrypto/utils", branch = "pad_error" }
inout = { git = "https://github.com/RustCrypto/utils", branch = "pad_error" }
